deploy: a82a66b3c52ce8d26b57257062bd9a39ffe6e284

--- a/examples/example04_package_comparison.ipynb
+++ b/examples/example04_package_comparison.ipynb
@@ -29,10 +29,10 @@
    "execution_count": 1,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T17:55:43.683520Z",
-     "iopub.status.busy": "2025-07-24T17:55:43.683356Z",
-     "iopub.status.idle": "2025-07-24T17:55:44.654134Z",
-     "shell.execute_reply": "2025-07-24T17:55:44.653498Z"
+     "iopub.execute_input": "2025-07-24T18:03:10.672165Z",
+     "iopub.status.busy": "2025-07-24T18:03:10.672000Z",
+     "iopub.status.idle": "2025-07-24T18:03:11.665357Z",
+     "shell.execute_reply": "2025-07-24T18:03:11.664774Z"
     }
    },
    "outputs": [
@@ -72,10 +72,10 @@
    "execution_count": 2,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T17:55:44.656131Z",
-     "iopub.status.busy": "2025-07-24T17:55:44.655870Z",
-     "iopub.status.idle": "2025-07-24T17:55:44.982323Z",
-     "shell.execute_reply": "2025-07-24T17:55:44.981696Z"
+     "iopub.execute_input": "2025-07-24T18:03:11.667156Z",
+     "iopub.status.busy": "2025-07-24T18:03:11.666917Z",
+     "iopub.status.idle": "2025-07-24T18:03:12.003452Z",
+     "shell.execute_reply": "2025-07-24T18:03:12.002798Z"
     }
    },
    "outputs": [
@@ -104,10 +104,10 @@
    "execution_count": 3,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T17:55:44.984106Z",
-     "iopub.status.busy": "2025-07-24T17:55:44.983905Z",
-     "iopub.status.idle": "2025-07-24T17:55:45.123753Z",
-     "shell.execute_reply": "2025-07-24T17:55:45.123157Z"
+     "iopub.execute_input": "2025-07-24T18:03:12.005143Z",
+     "iopub.status.busy": "2025-07-24T18:03:12.004968Z",
+     "iopub.status.idle": "2025-07-24T18:03:12.143815Z",
+     "shell.execute_reply": "2025-07-24T18:03:12.143153Z"
     }
    },
    "outputs": [
@@ -145,10 +145,10 @@
    "execution_count": 4,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T17:55:45.125527Z",
-     "iopub.status.busy": "2025-07-24T17:55:45.125360Z",
-     "iopub.status.idle": "2025-07-24T17:55:45.524977Z",
-     "shell.execute_reply": "2025-07-24T17:55:45.524431Z"
+     "iopub.execute_input": "2025-07-24T18:03:12.145637Z",
+     "iopub.status.busy": "2025-07-24T18:03:12.145447Z",
+     "iopub.status.idle": "2025-07-24T18:03:12.539473Z",
+     "shell.execute_reply": "2025-07-24T18:03:12.538938Z"
     }
    },
    "outputs": [
@@ -193,10 +193,10 @@
    "execution_count": 5,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T17:55:45.526661Z",
-     "iopub.status.busy": "2025-07-24T17:55:45.526500Z",
-     "iopub.status.idle": "2025-07-24T17:55:45.815260Z",
-     "shell.execute_reply": "2025-07-24T17:55:45.814603Z"
+     "iopub.execute_input": "2025-07-24T18:03:12.541181Z",
+     "iopub.status.busy": "2025-07-24T18:03:12.541021Z",
+     "iopub.status.idle": "2025-07-24T18:03:12.824859Z",
+     "shell.execute_reply": "2025-07-24T18:03:12.824303Z"
     }
    },
    "outputs": [
@@ -361,10 +361,10 @@
    "execution_count": 6,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T17:55:45.816940Z",
-     "iopub.status.busy": "2025-07-24T17:55:45.816765Z",
-     "iopub.status.idle": "2025-07-24T17:55:45.819421Z",
-     "shell.execute_reply": "2025-07-24T17:55:45.818815Z"
+     "iopub.execute_input": "2025-07-24T18:03:12.826503Z",
+     "iopub.status.busy": "2025-07-24T18:03:12.826344Z",
+     "iopub.status.idle": "2025-07-24T18:03:12.828561Z",
+     "shell.execute_reply": "2025-07-24T18:03:12.828129Z"
     }
    },
    "outputs": [],
@@ -378,10 +378,10 @@
    "execution_count": 7,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T17:55:45.820924Z",
-     "iopub.status.busy": "2025-07-24T17:55:45.820772Z",
-     "iopub.status.idle": "2025-07-24T17:55:45.823383Z",
-     "shell.execute_reply": "2025-07-24T17:55:45.822927Z"
+     "iopub.execute_input": "2025-07-24T18:03:12.830042Z",
+     "iopub.status.busy": "2025-07-24T18:03:12.829894Z",
+     "iopub.status.idle": "2025-07-24T18:03:12.832508Z",
+     "shell.execute_reply": "2025-07-24T18:03:12.832064Z"
     }
    },
    "outputs": [],
@@ -438,10 +438,10 @@
    "execution_count": 8,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T17:55:45.824826Z",
-     "iopub.status.busy": "2025-07-24T17:55:45.824677Z",
-     "iopub.status.idle": "2025-07-24T17:55:46.909987Z",
-     "shell.execute_reply": "2025-07-24T17:55:46.909493Z"
+     "iopub.execute_input": "2025-07-24T18:03:12.833957Z",
+     "iopub.status.busy": "2025-07-24T18:03:12.833808Z",
+     "iopub.status.idle": "2025-07-24T18:03:13.930841Z",
+     "shell.execute_reply": "2025-07-24T18:03:13.930307Z"
     }
    },
    "outputs": [
@@ -459,7 +459,7 @@
      "text": [
       "/home/runner/work/SPEI/SPEI/.tox/docu/lib/python3.11/site-packages/rpy2/rinterface/__init__.py:1211: UserWarning: Environment variable \"LD_LIBRARY_PATH\" redefined by R and overriding existing variable. Current: \"/opt/R/4.3.3/lib/R/lib:/usr/local/lib:/usr/lib/x86_64-linux-gnu:/usr/lib/jvm/java-21-openjdk-amd64/lib/server:/opt/hostedtoolcache/Python/3.11.13/x64/lib\", R: \"/opt/R/4.3.3/lib/R/lib:/usr/local/lib:/usr/lib/x86_64-linux-gnu:/usr/lib/jvm/java-21-openjdk-amd64/lib/server:/opt/R/4.3.3/lib/R/lib:/usr/local/lib:/usr/lib/x86_64-linux-gnu:/usr/lib/jvm/java-21-openjdk-amd64/lib/server:/opt/hostedtoolcache/Python/3.11.13/x64/lib\"\n",
       "  warnings.warn(\n",
-      "/home/runner/work/SPEI/SPEI/.tox/docu/lib/python3.11/site-packages/rpy2/rinterface/__init__.py:1211: UserWarning: Environment variable \"R_SESSION_TMPDIR\" redefined by R and overriding existing variable. Current: \"/tmp/RtmpavjiFg\", R: \"/tmp/RtmpQmEjIB\"\n",
+      "/home/runner/work/SPEI/SPEI/.tox/docu/lib/python3.11/site-packages/rpy2/rinterface/__init__.py:1211: UserWarning: Environment variable \"R_SESSION_TMPDIR\" redefined by R and overriding existing variable. Current: \"/tmp/Rtmp337aTK\", R: \"/tmp/RtmpDqF3YM\"\n",
       "  warnings.warn(\n"
      ]
     },
@@ -502,10 +502,10 @@
    "execution_count": 9,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T17:55:46.911828Z",
-     "iopub.status.busy": "2025-07-24T17:55:46.911669Z",
-     "iopub.status.idle": "2025-07-24T17:55:47.355641Z",
-     "shell.execute_reply": "2025-07-24T17:55:47.355060Z"
+     "iopub.execute_input": "2025-07-24T18:03:13.932716Z",
+     "iopub.status.busy": "2025-07-24T18:03:13.932559Z",
+     "iopub.status.idle": "2025-07-24T18:03:14.365803Z",
+     "shell.execute_reply": "2025-07-24T18:03:14.365111Z"
     }
    },
    "outputs": [
@@ -585,10 +585,10 @@
    "execution_count": 10,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T17:55:47.357490Z",
-     "iopub.status.busy": "2025-07-24T17:55:47.357294Z",
-     "iopub.status.idle": "2025-07-24T17:55:47.691271Z",
-     "shell.execute_reply": "2025-07-24T17:55:47.690684Z"
+     "iopub.execute_input": "2025-07-24T18:03:14.367634Z",
+     "iopub.status.busy": "2025-07-24T18:03:14.367451Z",
+     "iopub.status.idle": "2025-07-24T18:03:14.688837Z",
+     "shell.execute_reply": "2025-07-24T18:03:14.688278Z"
     }
    },
    "outputs": [
@@ -612,10 +612,10 @@
    "execution_count": 11,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T17:55:47.692927Z",
-     "iopub.status.busy": "2025-07-24T17:55:47.692750Z",
-     "iopub.status.idle": "2025-07-24T17:55:47.700683Z",
-     "shell.execute_reply": "2025-07-24T17:55:47.700198Z"
+     "iopub.execute_input": "2025-07-24T18:03:14.690434Z",
+     "iopub.status.busy": "2025-07-24T18:03:14.690272Z",
+     "iopub.status.idle": "2025-07-24T18:03:14.697422Z",
+     "shell.execute_reply": "2025-07-24T18:03:14.696954Z"
     }
    },
    "outputs": [
@@ -742,10 +742,10 @@
    "execution_count": 12,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T17:55:47.702155Z",
-     "iopub.status.busy": "2025-07-24T17:55:47.701992Z",
-     "iopub.status.idle": "2025-07-24T17:55:48.132674Z",
-     "shell.execute_reply": "2025-07-24T17:55:48.131999Z"
+     "iopub.execute_input": "2025-07-24T18:03:14.699014Z",
+     "iopub.status.busy": "2025-07-24T18:03:14.698855Z",
+     "iopub.status.idle": "2025-07-24T18:03:15.117922Z",
+     "shell.execute_reply": "2025-07-24T18:03:15.117359Z"
     }
    },
    "outputs": [
