deploy: 9690cd56823852b74428834d62f9accacd32ddcb

--- a/examples/example04_package_comparison.ipynb
+++ b/examples/example04_package_comparison.ipynb
@@ -29,10 +29,10 @@
    "execution_count": 1,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T18:03:10.672165Z",
-     "iopub.status.busy": "2025-07-24T18:03:10.672000Z",
-     "iopub.status.idle": "2025-07-24T18:03:11.665357Z",
-     "shell.execute_reply": "2025-07-24T18:03:11.664774Z"
+     "iopub.execute_input": "2025-07-24T18:03:15.789481Z",
+     "iopub.status.busy": "2025-07-24T18:03:15.789229Z",
+     "iopub.status.idle": "2025-07-24T18:03:16.760381Z",
+     "shell.execute_reply": "2025-07-24T18:03:16.759773Z"
     }
    },
    "outputs": [
@@ -72,10 +72,10 @@
    "execution_count": 2,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T18:03:11.667156Z",
-     "iopub.status.busy": "2025-07-24T18:03:11.666917Z",
-     "iopub.status.idle": "2025-07-24T18:03:12.003452Z",
-     "shell.execute_reply": "2025-07-24T18:03:12.002798Z"
+     "iopub.execute_input": "2025-07-24T18:03:16.762238Z",
+     "iopub.status.busy": "2025-07-24T18:03:16.761995Z",
+     "iopub.status.idle": "2025-07-24T18:03:17.087046Z",
+     "shell.execute_reply": "2025-07-24T18:03:17.086461Z"
     }
    },
    "outputs": [
@@ -104,10 +104,10 @@
    "execution_count": 3,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T18:03:12.005143Z",
-     "iopub.status.busy": "2025-07-24T18:03:12.004968Z",
-     "iopub.status.idle": "2025-07-24T18:03:12.143815Z",
-     "shell.execute_reply": "2025-07-24T18:03:12.143153Z"
+     "iopub.execute_input": "2025-07-24T18:03:17.088840Z",
+     "iopub.status.busy": "2025-07-24T18:03:17.088661Z",
+     "iopub.status.idle": "2025-07-24T18:03:17.227382Z",
+     "shell.execute_reply": "2025-07-24T18:03:17.226773Z"
     }
    },
    "outputs": [
@@ -145,10 +145,10 @@
    "execution_count": 4,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T18:03:12.145637Z",
-     "iopub.status.busy": "2025-07-24T18:03:12.145447Z",
-     "iopub.status.idle": "2025-07-24T18:03:12.539473Z",
-     "shell.execute_reply": "2025-07-24T18:03:12.538938Z"
+     "iopub.execute_input": "2025-07-24T18:03:17.229021Z",
+     "iopub.status.busy": "2025-07-24T18:03:17.228858Z",
+     "iopub.status.idle": "2025-07-24T18:03:17.625105Z",
+     "shell.execute_reply": "2025-07-24T18:03:17.624585Z"
     }
    },
    "outputs": [
@@ -193,10 +193,10 @@
    "execution_count": 5,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T18:03:12.541181Z",
-     "iopub.status.busy": "2025-07-24T18:03:12.541021Z",
-     "iopub.status.idle": "2025-07-24T18:03:12.824859Z",
-     "shell.execute_reply": "2025-07-24T18:03:12.824303Z"
+     "iopub.execute_input": "2025-07-24T18:03:17.626729Z",
+     "iopub.status.busy": "2025-07-24T18:03:17.626562Z",
+     "iopub.status.idle": "2025-07-24T18:03:17.910883Z",
+     "shell.execute_reply": "2025-07-24T18:03:17.910238Z"
     }
    },
    "outputs": [
@@ -361,10 +361,10 @@
    "execution_count": 6,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T18:03:12.826503Z",
-     "iopub.status.busy": "2025-07-24T18:03:12.826344Z",
-     "iopub.status.idle": "2025-07-24T18:03:12.828561Z",
-     "shell.execute_reply": "2025-07-24T18:03:12.828129Z"
+     "iopub.execute_input": "2025-07-24T18:03:17.912585Z",
+     "iopub.status.busy": "2025-07-24T18:03:17.912416Z",
+     "iopub.status.idle": "2025-07-24T18:03:17.914718Z",
+     "shell.execute_reply": "2025-07-24T18:03:17.914246Z"
     }
    },
    "outputs": [],
@@ -378,10 +378,10 @@
    "execution_count": 7,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T18:03:12.830042Z",
-     "iopub.status.busy": "2025-07-24T18:03:12.829894Z",
-     "iopub.status.idle": "2025-07-24T18:03:12.832508Z",
-     "shell.execute_reply": "2025-07-24T18:03:12.832064Z"
+     "iopub.execute_input": "2025-07-24T18:03:17.916149Z",
+     "iopub.status.busy": "2025-07-24T18:03:17.915997Z",
+     "iopub.status.idle": "2025-07-24T18:03:17.918712Z",
+     "shell.execute_reply": "2025-07-24T18:03:17.918248Z"
     }
    },
    "outputs": [],
@@ -438,10 +438,10 @@
    "execution_count": 8,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T18:03:12.833957Z",
-     "iopub.status.busy": "2025-07-24T18:03:12.833808Z",
-     "iopub.status.idle": "2025-07-24T18:03:13.930841Z",
-     "shell.execute_reply": "2025-07-24T18:03:13.930307Z"
+     "iopub.execute_input": "2025-07-24T18:03:17.920170Z",
+     "iopub.status.busy": "2025-07-24T18:03:17.920003Z",
+     "iopub.status.idle": "2025-07-24T18:03:19.001779Z",
+     "shell.execute_reply": "2025-07-24T18:03:19.001298Z"
     }
    },
    "outputs": [
@@ -459,7 +459,7 @@
      "text": [
       "/home/runner/work/SPEI/SPEI/.tox/docu/lib/python3.11/site-packages/rpy2/rinterface/__init__.py:1211: UserWarning: Environment variable \"LD_LIBRARY_PATH\" redefined by R and overriding existing variable. Current: \"/opt/R/4.3.3/lib/R/lib:/usr/local/lib:/usr/lib/x86_64-linux-gnu:/usr/lib/jvm/java-21-openjdk-amd64/lib/server:/opt/hostedtoolcache/Python/3.11.13/x64/lib\", R: \"/opt/R/4.3.3/lib/R/lib:/usr/local/lib:/usr/lib/x86_64-linux-gnu:/usr/lib/jvm/java-21-openjdk-amd64/lib/server:/opt/R/4.3.3/lib/R/lib:/usr/local/lib:/usr/lib/x86_64-linux-gnu:/usr/lib/jvm/java-21-openjdk-amd64/lib/server:/opt/hostedtoolcache/Python/3.11.13/x64/lib\"\n",
       "  warnings.warn(\n",
-      "/home/runner/work/SPEI/SPEI/.tox/docu/lib/python3.11/site-packages/rpy2/rinterface/__init__.py:1211: UserWarning: Environment variable \"R_SESSION_TMPDIR\" redefined by R and overriding existing variable. Current: \"/tmp/Rtmp337aTK\", R: \"/tmp/RtmpDqF3YM\"\n",
+      "/home/runner/work/SPEI/SPEI/.tox/docu/lib/python3.11/site-packages/rpy2/rinterface/__init__.py:1211: UserWarning: Environment variable \"R_SESSION_TMPDIR\" redefined by R and overriding existing variable. Current: \"/tmp/RtmpRD9is7\", R: \"/tmp/Rtmp3h9dQ4\"\n",
       "  warnings.warn(\n"
      ]
     },
@@ -502,10 +502,10 @@
    "execution_count": 9,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T18:03:13.932716Z",
-     "iopub.status.busy": "2025-07-24T18:03:13.932559Z",
-     "iopub.status.idle": "2025-07-24T18:03:14.365803Z",
-     "shell.execute_reply": "2025-07-24T18:03:14.365111Z"
+     "iopub.execute_input": "2025-07-24T18:03:19.003536Z",
+     "iopub.status.busy": "2025-07-24T18:03:19.003380Z",
+     "iopub.status.idle": "2025-07-24T18:03:19.407630Z",
+     "shell.execute_reply": "2025-07-24T18:03:19.407018Z"
     }
    },
    "outputs": [
@@ -585,10 +585,10 @@
    "execution_count": 10,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T18:03:14.367634Z",
-     "iopub.status.busy": "2025-07-24T18:03:14.367451Z",
-     "iopub.status.idle": "2025-07-24T18:03:14.688837Z",
-     "shell.execute_reply": "2025-07-24T18:03:14.688278Z"
+     "iopub.execute_input": "2025-07-24T18:03:19.409381Z",
+     "iopub.status.busy": "2025-07-24T18:03:19.409189Z",
+     "iopub.status.idle": "2025-07-24T18:03:19.727651Z",
+     "shell.execute_reply": "2025-07-24T18:03:19.727020Z"
     }
    },
    "outputs": [
@@ -612,10 +612,10 @@
    "execution_count": 11,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T18:03:14.690434Z",
-     "iopub.status.busy": "2025-07-24T18:03:14.690272Z",
-     "iopub.status.idle": "2025-07-24T18:03:14.697422Z",
-     "shell.execute_reply": "2025-07-24T18:03:14.696954Z"
+     "iopub.execute_input": "2025-07-24T18:03:19.729378Z",
+     "iopub.status.busy": "2025-07-24T18:03:19.729191Z",
+     "iopub.status.idle": "2025-07-24T18:03:19.736433Z",
+     "shell.execute_reply": "2025-07-24T18:03:19.735978Z"
     }
    },
    "outputs": [
@@ -742,10 +742,10 @@
    "execution_count": 12,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T18:03:14.699014Z",
-     "iopub.status.busy": "2025-07-24T18:03:14.698855Z",
-     "iopub.status.idle": "2025-07-24T18:03:15.117922Z",
-     "shell.execute_reply": "2025-07-24T18:03:15.117359Z"
+     "iopub.execute_input": "2025-07-24T18:03:19.737902Z",
+     "iopub.status.busy": "2025-07-24T18:03:19.737744Z",
+     "iopub.status.idle": "2025-07-24T18:03:20.153872Z",
+     "shell.execute_reply": "2025-07-24T18:03:20.153292Z"
     }
    },
    "outputs": [
