--- a/examples/example07_knmi.ipynb
+++ b/examples/example07_knmi.ipynb
@@ -5,7 +5,7 @@
    "id": "87fd561f",
    "metadata": {},
    "source": [
-    "# KNMI Drougt Indices\n",
+    "# KNMI Drought Indices\n",
     "\n",
     "J.P.M. Witte, G.A.P.H. van den Eertwegh and P.J.J.F. Torfs (2025) - [Absolute Meteorological Drought Indices Validated Against Irrigation Amounts](https://doi.org/10.3390/w17071056)."
    ]
@@ -24,10 +24,10 @@
    "id": "1a439ca7",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T18:03:31.003781Z",
-     "iopub.status.busy": "2025-07-24T18:03:31.003605Z",
-     "iopub.status.idle": "2025-07-24T18:03:31.955976Z",
-     "shell.execute_reply": "2025-07-24T18:03:31.955413Z"
+     "iopub.execute_input": "2025-07-24T18:03:35.633452Z",
+     "iopub.status.busy": "2025-07-24T18:03:35.633172Z",
+     "iopub.status.idle": "2025-07-24T18:03:36.632072Z",
+     "shell.execute_reply": "2025-07-24T18:03:36.631510Z"
     }
    },
    "outputs": [],
@@ -63,10 +63,10 @@
    "id": "131815ed",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T18:03:31.958061Z",
-     "iopub.status.busy": "2025-07-24T18:03:31.957806Z",
-     "iopub.status.idle": "2025-07-24T18:03:31.960539Z",
-     "shell.execute_reply": "2025-07-24T18:03:31.960049Z"
+     "iopub.execute_input": "2025-07-24T18:03:36.634173Z",
+     "iopub.status.busy": "2025-07-24T18:03:36.633927Z",
+     "iopub.status.idle": "2025-07-24T18:03:36.636692Z",
+     "shell.execute_reply": "2025-07-24T18:03:36.636207Z"
     }
    },
    "outputs": [],
@@ -119,10 +119,10 @@
    "id": "7401ab30",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T18:03:31.962114Z",
-     "iopub.status.busy": "2025-07-24T18:03:31.961939Z",
-     "iopub.status.idle": "2025-07-24T18:03:31.965129Z",
-     "shell.execute_reply": "2025-07-24T18:03:31.964550Z"
+     "iopub.execute_input": "2025-07-24T18:03:36.638223Z",
+     "iopub.status.busy": "2025-07-24T18:03:36.638070Z",
+     "iopub.status.idle": "2025-07-24T18:03:36.640791Z",
+     "shell.execute_reply": "2025-07-24T18:03:36.640346Z"
     }
    },
    "outputs": [],
@@ -198,10 +198,10 @@
    "id": "528daaa6",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T18:03:31.966636Z",
-     "iopub.status.busy": "2025-07-24T18:03:31.966473Z",
-     "iopub.status.idle": "2025-07-24T18:03:31.988798Z",
-     "shell.execute_reply": "2025-07-24T18:03:31.988168Z"
+     "iopub.execute_input": "2025-07-24T18:03:36.642248Z",
+     "iopub.status.busy": "2025-07-24T18:03:36.642098Z",
+     "iopub.status.idle": "2025-07-24T18:03:36.663712Z",
+     "shell.execute_reply": "2025-07-24T18:03:36.663282Z"
     }
    },
    "outputs": [],
@@ -226,10 +226,10 @@
    "id": "433a3701",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T18:03:31.990688Z",
-     "iopub.status.busy": "2025-07-24T18:03:31.990514Z",
-     "iopub.status.idle": "2025-07-24T18:03:32.854364Z",
-     "shell.execute_reply": "2025-07-24T18:03:32.853706Z"
+     "iopub.execute_input": "2025-07-24T18:03:36.665227Z",
+     "iopub.status.busy": "2025-07-24T18:03:36.665073Z",
+     "iopub.status.idle": "2025-07-24T18:03:37.504682Z",
+     "shell.execute_reply": "2025-07-24T18:03:37.504086Z"
     }
    },
    "outputs": [
@@ -299,10 +299,10 @@
    "id": "a0a18964",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T18:03:32.856906Z",
-     "iopub.status.busy": "2025-07-24T18:03:32.856740Z",
-     "iopub.status.idle": "2025-07-24T18:03:33.021060Z",
-     "shell.execute_reply": "2025-07-24T18:03:33.020555Z"
+     "iopub.execute_input": "2025-07-24T18:03:37.507044Z",
+     "iopub.status.busy": "2025-07-24T18:03:37.506860Z",
+     "iopub.status.idle": "2025-07-24T18:03:37.671787Z",
+     "shell.execute_reply": "2025-07-24T18:03:37.671280Z"
     }
    },
    "outputs": [
@@ -416,10 +416,10 @@
    "id": "ca3b85aa",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T18:03:33.022744Z",
-     "iopub.status.busy": "2025-07-24T18:03:33.022580Z",
-     "iopub.status.idle": "2025-07-24T18:03:33.181342Z",
-     "shell.execute_reply": "2025-07-24T18:03:33.180791Z"
+     "iopub.execute_input": "2025-07-24T18:03:37.673447Z",
+     "iopub.status.busy": "2025-07-24T18:03:37.673277Z",
+     "iopub.status.idle": "2025-07-24T18:03:37.830238Z",
+     "shell.execute_reply": "2025-07-24T18:03:37.829752Z"
     }
    },
    "outputs": [
@@ -533,10 +533,10 @@
    "id": "88fa3017",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T18:03:33.182986Z",
-     "iopub.status.busy": "2025-07-24T18:03:33.182819Z",
-     "iopub.status.idle": "2025-07-24T18:03:33.341278Z",
-     "shell.execute_reply": "2025-07-24T18:03:33.340773Z"
+     "iopub.execute_input": "2025-07-24T18:03:37.831838Z",
+     "iopub.status.busy": "2025-07-24T18:03:37.831668Z",
+     "iopub.status.idle": "2025-07-24T18:03:37.985390Z",
+     "shell.execute_reply": "2025-07-24T18:03:37.984732Z"
     }
    },
    "outputs": [
@@ -643,10 +643,10 @@
    "id": "7fa91d05",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T18:03:33.342939Z",
-     "iopub.status.busy": "2025-07-24T18:03:33.342768Z",
-     "iopub.status.idle": "2025-07-24T18:03:33.625808Z",
-     "shell.execute_reply": "2025-07-24T18:03:33.625157Z"
+     "iopub.execute_input": "2025-07-24T18:03:37.987120Z",
+     "iopub.status.busy": "2025-07-24T18:03:37.986935Z",
+     "iopub.status.idle": "2025-07-24T18:03:38.266186Z",
+     "shell.execute_reply": "2025-07-24T18:03:38.265690Z"
     }
    },
    "outputs": [
@@ -753,10 +753,10 @@
    "id": "66972df3",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T18:03:33.627581Z",
-     "iopub.status.busy": "2025-07-24T18:03:33.627407Z",
-     "iopub.status.idle": "2025-07-24T18:03:33.788619Z",
-     "shell.execute_reply": "2025-07-24T18:03:33.788009Z"
+     "iopub.execute_input": "2025-07-24T18:03:38.267746Z",
+     "iopub.status.busy": "2025-07-24T18:03:38.267583Z",
+     "iopub.status.idle": "2025-07-24T18:03:38.423751Z",
+     "shell.execute_reply": "2025-07-24T18:03:38.423231Z"
     }
    },
    "outputs": [
@@ -873,10 +873,10 @@
    "id": "38d6f9af",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T18:03:33.790383Z",
-     "iopub.status.busy": "2025-07-24T18:03:33.790186Z",
-     "iopub.status.idle": "2025-07-24T18:03:35.008774Z",
-     "shell.execute_reply": "2025-07-24T18:03:35.008083Z"
+     "iopub.execute_input": "2025-07-24T18:03:38.425416Z",
+     "iopub.status.busy": "2025-07-24T18:03:38.425228Z",
+     "iopub.status.idle": "2025-07-24T18:03:39.620239Z",
+     "shell.execute_reply": "2025-07-24T18:03:39.619643Z"
     }
    },
    "outputs": [
@@ -960,10 +960,10 @@
    "id": "b06fa427",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T18:03:35.011720Z",
-     "iopub.status.busy": "2025-07-24T18:03:35.011532Z",
-     "iopub.status.idle": "2025-07-24T18:03:35.217861Z",
-     "shell.execute_reply": "2025-07-24T18:03:35.217279Z"
+     "iopub.execute_input": "2025-07-24T18:03:39.622963Z",
+     "iopub.status.busy": "2025-07-24T18:03:39.622801Z",
+     "iopub.status.idle": "2025-07-24T18:03:39.823720Z",
+     "shell.execute_reply": "2025-07-24T18:03:39.823141Z"
     }
    },
    "outputs": [
@@ -1007,10 +1007,10 @@
    "id": "eb4ea498",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T18:03:35.219519Z",
-     "iopub.status.busy": "2025-07-24T18:03:35.219362Z",
-     "iopub.status.idle": "2025-07-24T18:03:35.441603Z",
-     "shell.execute_reply": "2025-07-24T18:03:35.440953Z"
+     "iopub.execute_input": "2025-07-24T18:03:39.825367Z",
+     "iopub.status.busy": "2025-07-24T18:03:39.825179Z",
+     "iopub.status.idle": "2025-07-24T18:03:40.043005Z",
+     "shell.execute_reply": "2025-07-24T18:03:40.042408Z"
     }
    },
    "outputs": [
