deploy: 5e56dec252b8078bce8098d07cecb41970b51987

--- a/examples/example04_package_comparison.ipynb
+++ b/examples/example04_package_comparison.ipynb
@@ -29,10 +29,10 @@
    "execution_count": 1,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T18:03:15.789481Z",
-     "iopub.status.busy": "2025-07-24T18:03:15.789229Z",
-     "iopub.status.idle": "2025-07-24T18:03:16.760381Z",
-     "shell.execute_reply": "2025-07-24T18:03:16.759773Z"
+     "iopub.execute_input": "2025-07-24T18:03:59.156076Z",
+     "iopub.status.busy": "2025-07-24T18:03:59.155850Z",
+     "iopub.status.idle": "2025-07-24T18:04:00.083176Z",
+     "shell.execute_reply": "2025-07-24T18:04:00.082681Z"
     }
    },
    "outputs": [
@@ -72,10 +72,10 @@
    "execution_count": 2,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T18:03:16.762238Z",
-     "iopub.status.busy": "2025-07-24T18:03:16.761995Z",
-     "iopub.status.idle": "2025-07-24T18:03:17.087046Z",
-     "shell.execute_reply": "2025-07-24T18:03:17.086461Z"
+     "iopub.execute_input": "2025-07-24T18:04:00.084899Z",
+     "iopub.status.busy": "2025-07-24T18:04:00.084678Z",
+     "iopub.status.idle": "2025-07-24T18:04:00.387358Z",
+     "shell.execute_reply": "2025-07-24T18:04:00.386840Z"
     }
    },
    "outputs": [
@@ -104,10 +104,10 @@
    "execution_count": 3,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T18:03:17.088840Z",
-     "iopub.status.busy": "2025-07-24T18:03:17.088661Z",
-     "iopub.status.idle": "2025-07-24T18:03:17.227382Z",
-     "shell.execute_reply": "2025-07-24T18:03:17.226773Z"
+     "iopub.execute_input": "2025-07-24T18:04:00.388973Z",
+     "iopub.status.busy": "2025-07-24T18:04:00.388812Z",
+     "iopub.status.idle": "2025-07-24T18:04:00.524821Z",
+     "shell.execute_reply": "2025-07-24T18:04:00.524208Z"
     }
    },
    "outputs": [
@@ -145,10 +145,10 @@
    "execution_count": 4,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T18:03:17.229021Z",
-     "iopub.status.busy": "2025-07-24T18:03:17.228858Z",
-     "iopub.status.idle": "2025-07-24T18:03:17.625105Z",
-     "shell.execute_reply": "2025-07-24T18:03:17.624585Z"
+     "iopub.execute_input": "2025-07-24T18:04:00.526557Z",
+     "iopub.status.busy": "2025-07-24T18:04:00.526394Z",
+     "iopub.status.idle": "2025-07-24T18:04:00.913424Z",
+     "shell.execute_reply": "2025-07-24T18:04:00.912908Z"
     }
    },
    "outputs": [
@@ -193,10 +193,10 @@
    "execution_count": 5,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T18:03:17.626729Z",
-     "iopub.status.busy": "2025-07-24T18:03:17.626562Z",
-     "iopub.status.idle": "2025-07-24T18:03:17.910883Z",
-     "shell.execute_reply": "2025-07-24T18:03:17.910238Z"
+     "iopub.execute_input": "2025-07-24T18:04:00.915058Z",
+     "iopub.status.busy": "2025-07-24T18:04:00.914897Z",
+     "iopub.status.idle": "2025-07-24T18:04:01.205344Z",
+     "shell.execute_reply": "2025-07-24T18:04:01.204784Z"
     }
    },
    "outputs": [
@@ -361,10 +361,10 @@
    "execution_count": 6,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T18:03:17.912585Z",
-     "iopub.status.busy": "2025-07-24T18:03:17.912416Z",
-     "iopub.status.idle": "2025-07-24T18:03:17.914718Z",
-     "shell.execute_reply": "2025-07-24T18:03:17.914246Z"
+     "iopub.execute_input": "2025-07-24T18:04:01.206925Z",
+     "iopub.status.busy": "2025-07-24T18:04:01.206761Z",
+     "iopub.status.idle": "2025-07-24T18:04:01.208987Z",
+     "shell.execute_reply": "2025-07-24T18:04:01.208548Z"
     }
    },
    "outputs": [],
@@ -378,10 +378,10 @@
    "execution_count": 7,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T18:03:17.916149Z",
-     "iopub.status.busy": "2025-07-24T18:03:17.915997Z",
-     "iopub.status.idle": "2025-07-24T18:03:17.918712Z",
-     "shell.execute_reply": "2025-07-24T18:03:17.918248Z"
+     "iopub.execute_input": "2025-07-24T18:04:01.210436Z",
+     "iopub.status.busy": "2025-07-24T18:04:01.210257Z",
+     "iopub.status.idle": "2025-07-24T18:04:01.212852Z",
+     "shell.execute_reply": "2025-07-24T18:04:01.212420Z"
     }
    },
    "outputs": [],
@@ -438,10 +438,10 @@
    "execution_count": 8,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T18:03:17.920170Z",
-     "iopub.status.busy": "2025-07-24T18:03:17.920003Z",
-     "iopub.status.idle": "2025-07-24T18:03:19.001779Z",
-     "shell.execute_reply": "2025-07-24T18:03:19.001298Z"
+     "iopub.execute_input": "2025-07-24T18:04:01.214266Z",
+     "iopub.status.busy": "2025-07-24T18:04:01.214117Z",
+     "iopub.status.idle": "2025-07-24T18:04:02.412049Z",
+     "shell.execute_reply": "2025-07-24T18:04:02.411413Z"
     }
    },
    "outputs": [
@@ -459,7 +459,7 @@
      "text": [
       "/home/runner/work/SPEI/SPEI/.tox/docu/lib/python3.11/site-packages/rpy2/rinterface/__init__.py:1211: UserWarning: Environment variable \"LD_LIBRARY_PATH\" redefined by R and overriding existing variable. Current: \"/opt/R/4.3.3/lib/R/lib:/usr/local/lib:/usr/lib/x86_64-linux-gnu:/usr/lib/jvm/java-21-openjdk-amd64/lib/server:/opt/hostedtoolcache/Python/3.11.13/x64/lib\", R: \"/opt/R/4.3.3/lib/R/lib:/usr/local/lib:/usr/lib/x86_64-linux-gnu:/usr/lib/jvm/java-21-openjdk-amd64/lib/server:/opt/R/4.3.3/lib/R/lib:/usr/local/lib:/usr/lib/x86_64-linux-gnu:/usr/lib/jvm/java-21-openjdk-amd64/lib/server:/opt/hostedtoolcache/Python/3.11.13/x64/lib\"\n",
       "  warnings.warn(\n",
-      "/home/runner/work/SPEI/SPEI/.tox/docu/lib/python3.11/site-packages/rpy2/rinterface/__init__.py:1211: UserWarning: Environment variable \"R_SESSION_TMPDIR\" redefined by R and overriding existing variable. Current: \"/tmp/RtmpRD9is7\", R: \"/tmp/Rtmp3h9dQ4\"\n",
+      "/home/runner/work/SPEI/SPEI/.tox/docu/lib/python3.11/site-packages/rpy2/rinterface/__init__.py:1211: UserWarning: Environment variable \"R_SESSION_TMPDIR\" redefined by R and overriding existing variable. Current: \"/tmp/RtmpdrzNh8\", R: \"/tmp/RtmpJF39yJ\"\n",
       "  warnings.warn(\n"
      ]
     },
@@ -502,10 +502,10 @@
    "execution_count": 9,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T18:03:19.003536Z",
-     "iopub.status.busy": "2025-07-24T18:03:19.003380Z",
-     "iopub.status.idle": "2025-07-24T18:03:19.407630Z",
-     "shell.execute_reply": "2025-07-24T18:03:19.407018Z"
+     "iopub.execute_input": "2025-07-24T18:04:02.413978Z",
+     "iopub.status.busy": "2025-07-24T18:04:02.413823Z",
+     "iopub.status.idle": "2025-07-24T18:04:02.813047Z",
+     "shell.execute_reply": "2025-07-24T18:04:02.812538Z"
     }
    },
    "outputs": [
@@ -585,10 +585,10 @@
    "execution_count": 10,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T18:03:19.409381Z",
-     "iopub.status.busy": "2025-07-24T18:03:19.409189Z",
-     "iopub.status.idle": "2025-07-24T18:03:19.727651Z",
-     "shell.execute_reply": "2025-07-24T18:03:19.727020Z"
+     "iopub.execute_input": "2025-07-24T18:04:02.814658Z",
+     "iopub.status.busy": "2025-07-24T18:04:02.814504Z",
+     "iopub.status.idle": "2025-07-24T18:04:03.126142Z",
+     "shell.execute_reply": "2025-07-24T18:04:03.125588Z"
     }
    },
    "outputs": [
@@ -612,10 +612,10 @@
    "execution_count": 11,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T18:03:19.729378Z",
-     "iopub.status.busy": "2025-07-24T18:03:19.729191Z",
-     "iopub.status.idle": "2025-07-24T18:03:19.736433Z",
-     "shell.execute_reply": "2025-07-24T18:03:19.735978Z"
+     "iopub.execute_input": "2025-07-24T18:04:03.127693Z",
+     "iopub.status.busy": "2025-07-24T18:04:03.127535Z",
+     "iopub.status.idle": "2025-07-24T18:04:03.134620Z",
+     "shell.execute_reply": "2025-07-24T18:04:03.134166Z"
     }
    },
    "outputs": [
@@ -742,10 +742,10 @@
    "execution_count": 12,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T18:03:19.737902Z",
-     "iopub.status.busy": "2025-07-24T18:03:19.737744Z",
-     "iopub.status.idle": "2025-07-24T18:03:20.153872Z",
-     "shell.execute_reply": "2025-07-24T18:03:20.153292Z"
+     "iopub.execute_input": "2025-07-24T18:04:03.136177Z",
+     "iopub.status.busy": "2025-07-24T18:04:03.136027Z",
+     "iopub.status.idle": "2025-07-24T18:04:03.544731Z",
+     "shell.execute_reply": "2025-07-24T18:04:03.544235Z"
     }
    },
    "outputs": [
