--- a/examples/example07_knmi.ipynb
+++ b/examples/example07_knmi.ipynb
@@ -5,7 +5,7 @@
    "id": "87fd561f",
    "metadata": {},
    "source": [
-    "# KNMI Drought Indices\n",
+    "# KNMI Drougt Indices\n",
     "\n",
     "J.P.M. Witte, G.A.P.H. van den Eertwegh and P.J.J.F. Torfs (2025) - [Absolute Meteorological Drought Indices Validated Against Irrigation Amounts](https://doi.org/10.3390/w17071056)."
    ]
@@ -24,10 +24,10 @@
    "id": "1a439ca7",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T18:03:35.633452Z",
-     "iopub.status.busy": "2025-07-24T18:03:35.633172Z",
-     "iopub.status.idle": "2025-07-24T18:03:36.632072Z",
-     "shell.execute_reply": "2025-07-24T18:03:36.631510Z"
+     "iopub.execute_input": "2025-07-24T18:04:18.529385Z",
+     "iopub.status.busy": "2025-07-24T18:04:18.529207Z",
+     "iopub.status.idle": "2025-07-24T18:04:19.445386Z",
+     "shell.execute_reply": "2025-07-24T18:04:19.444728Z"
     }
    },
    "outputs": [],
@@ -63,10 +63,10 @@
    "id": "131815ed",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T18:03:36.634173Z",
-     "iopub.status.busy": "2025-07-24T18:03:36.633927Z",
-     "iopub.status.idle": "2025-07-24T18:03:36.636692Z",
-     "shell.execute_reply": "2025-07-24T18:03:36.636207Z"
+     "iopub.execute_input": "2025-07-24T18:04:19.447474Z",
+     "iopub.status.busy": "2025-07-24T18:04:19.447207Z",
+     "iopub.status.idle": "2025-07-24T18:04:19.449945Z",
+     "shell.execute_reply": "2025-07-24T18:04:19.449499Z"
     }
    },
    "outputs": [],
@@ -119,10 +119,10 @@
    "id": "7401ab30",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T18:03:36.638223Z",
-     "iopub.status.busy": "2025-07-24T18:03:36.638070Z",
-     "iopub.status.idle": "2025-07-24T18:03:36.640791Z",
-     "shell.execute_reply": "2025-07-24T18:03:36.640346Z"
+     "iopub.execute_input": "2025-07-24T18:04:19.451447Z",
+     "iopub.status.busy": "2025-07-24T18:04:19.451267Z",
+     "iopub.status.idle": "2025-07-24T18:04:19.454065Z",
+     "shell.execute_reply": "2025-07-24T18:04:19.453649Z"
     }
    },
    "outputs": [],
@@ -198,10 +198,10 @@
    "id": "528daaa6",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T18:03:36.642248Z",
-     "iopub.status.busy": "2025-07-24T18:03:36.642098Z",
-     "iopub.status.idle": "2025-07-24T18:03:36.663712Z",
-     "shell.execute_reply": "2025-07-24T18:03:36.663282Z"
+     "iopub.execute_input": "2025-07-24T18:04:19.455580Z",
+     "iopub.status.busy": "2025-07-24T18:04:19.455429Z",
+     "iopub.status.idle": "2025-07-24T18:04:19.476598Z",
+     "shell.execute_reply": "2025-07-24T18:04:19.476156Z"
     }
    },
    "outputs": [],
@@ -226,10 +226,10 @@
    "id": "433a3701",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T18:03:36.665227Z",
-     "iopub.status.busy": "2025-07-24T18:03:36.665073Z",
-     "iopub.status.idle": "2025-07-24T18:03:37.504682Z",
-     "shell.execute_reply": "2025-07-24T18:03:37.504086Z"
+     "iopub.execute_input": "2025-07-24T18:04:19.478062Z",
+     "iopub.status.busy": "2025-07-24T18:04:19.477911Z",
+     "iopub.status.idle": "2025-07-24T18:04:20.307821Z",
+     "shell.execute_reply": "2025-07-24T18:04:20.307215Z"
     }
    },
    "outputs": [
@@ -299,10 +299,10 @@
    "id": "a0a18964",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T18:03:37.507044Z",
-     "iopub.status.busy": "2025-07-24T18:03:37.506860Z",
-     "iopub.status.idle": "2025-07-24T18:03:37.671787Z",
-     "shell.execute_reply": "2025-07-24T18:03:37.671280Z"
+     "iopub.execute_input": "2025-07-24T18:04:20.310056Z",
+     "iopub.status.busy": "2025-07-24T18:04:20.309890Z",
+     "iopub.status.idle": "2025-07-24T18:04:20.470954Z",
+     "shell.execute_reply": "2025-07-24T18:04:20.470371Z"
     }
    },
    "outputs": [
@@ -416,10 +416,10 @@
    "id": "ca3b85aa",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T18:03:37.673447Z",
-     "iopub.status.busy": "2025-07-24T18:03:37.673277Z",
-     "iopub.status.idle": "2025-07-24T18:03:37.830238Z",
-     "shell.execute_reply": "2025-07-24T18:03:37.829752Z"
+     "iopub.execute_input": "2025-07-24T18:04:20.472603Z",
+     "iopub.status.busy": "2025-07-24T18:04:20.472445Z",
+     "iopub.status.idle": "2025-07-24T18:04:20.633404Z",
+     "shell.execute_reply": "2025-07-24T18:04:20.632799Z"
     }
    },
    "outputs": [
@@ -533,10 +533,10 @@
    "id": "88fa3017",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T18:03:37.831838Z",
-     "iopub.status.busy": "2025-07-24T18:03:37.831668Z",
-     "iopub.status.idle": "2025-07-24T18:03:37.985390Z",
-     "shell.execute_reply": "2025-07-24T18:03:37.984732Z"
+     "iopub.execute_input": "2025-07-24T18:04:20.634942Z",
+     "iopub.status.busy": "2025-07-24T18:04:20.634783Z",
+     "iopub.status.idle": "2025-07-24T18:04:20.789978Z",
+     "shell.execute_reply": "2025-07-24T18:04:20.789527Z"
     }
    },
    "outputs": [
@@ -643,10 +643,10 @@
    "id": "7fa91d05",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T18:03:37.987120Z",
-     "iopub.status.busy": "2025-07-24T18:03:37.986935Z",
-     "iopub.status.idle": "2025-07-24T18:03:38.266186Z",
-     "shell.execute_reply": "2025-07-24T18:03:38.265690Z"
+     "iopub.execute_input": "2025-07-24T18:04:20.791553Z",
+     "iopub.status.busy": "2025-07-24T18:04:20.791399Z",
+     "iopub.status.idle": "2025-07-24T18:04:21.066182Z",
+     "shell.execute_reply": "2025-07-24T18:04:21.065593Z"
     }
    },
    "outputs": [
@@ -753,10 +753,10 @@
    "id": "66972df3",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T18:03:38.267746Z",
-     "iopub.status.busy": "2025-07-24T18:03:38.267583Z",
-     "iopub.status.idle": "2025-07-24T18:03:38.423751Z",
-     "shell.execute_reply": "2025-07-24T18:03:38.423231Z"
+     "iopub.execute_input": "2025-07-24T18:04:21.067819Z",
+     "iopub.status.busy": "2025-07-24T18:04:21.067655Z",
+     "iopub.status.idle": "2025-07-24T18:04:21.222908Z",
+     "shell.execute_reply": "2025-07-24T18:04:21.222451Z"
     }
    },
    "outputs": [
@@ -873,10 +873,10 @@
    "id": "38d6f9af",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T18:03:38.425416Z",
-     "iopub.status.busy": "2025-07-24T18:03:38.425228Z",
-     "iopub.status.idle": "2025-07-24T18:03:39.620239Z",
-     "shell.execute_reply": "2025-07-24T18:03:39.619643Z"
+     "iopub.execute_input": "2025-07-24T18:04:21.224503Z",
+     "iopub.status.busy": "2025-07-24T18:04:21.224350Z",
+     "iopub.status.idle": "2025-07-24T18:04:22.414010Z",
+     "shell.execute_reply": "2025-07-24T18:04:22.413468Z"
     }
    },
    "outputs": [
@@ -960,10 +960,10 @@
    "id": "b06fa427",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T18:03:39.622963Z",
-     "iopub.status.busy": "2025-07-24T18:03:39.622801Z",
-     "iopub.status.idle": "2025-07-24T18:03:39.823720Z",
-     "shell.execute_reply": "2025-07-24T18:03:39.823141Z"
+     "iopub.execute_input": "2025-07-24T18:04:22.416630Z",
+     "iopub.status.busy": "2025-07-24T18:04:22.416471Z",
+     "iopub.status.idle": "2025-07-24T18:04:22.618301Z",
+     "shell.execute_reply": "2025-07-24T18:04:22.617818Z"
     }
    },
    "outputs": [
@@ -1007,10 +1007,10 @@
    "id": "eb4ea498",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T18:03:39.825367Z",
-     "iopub.status.busy": "2025-07-24T18:03:39.825179Z",
-     "iopub.status.idle": "2025-07-24T18:03:40.043005Z",
-     "shell.execute_reply": "2025-07-24T18:03:40.042408Z"
+     "iopub.execute_input": "2025-07-24T18:04:22.619928Z",
+     "iopub.status.busy": "2025-07-24T18:04:22.619773Z",
+     "iopub.status.idle": "2025-07-24T18:04:22.837042Z",
+     "shell.execute_reply": "2025-07-24T18:04:22.836466Z"
     }
    },
    "outputs": [
